include/fmi4c.h

// FMU access functions

FMI4C_DLLAPI fmiVersion_t fmi4c_getFmiVersion(fmiHandle *fmu);
FMI4C_DLLAPI fmiHandle* fmi4c_loadFmu(const char *fmufile, const char* instanceName);
FMI4C_DLLAPI const char* fmi4c_getErrorMessages();
// FMI 1 wrapper functions
FMI4C_DLLAPI fmi1Type fmi1_getType(fmiHandle *fmu);
FMI4C_DLLAPI const char* fmi1_getModelName(fmiHandle *fmu);
FMI4C_DLLAPI const char* fmi1_getModelIdentifier(fmiHandle *fmu);
FMI4C_DLLAPI const char* fmi1_getGuid(fmiHandle *fmu);
FMI4C_DLLAPI const char* fmi1_getDescription(fmiHandle *fmu);
FMI4C_DLLAPI const char* fmi1_getAuthor(fmiHandle *fmu);
FMI4C_DLLAPI const char* fmi1_getGenerationTool(fmiHandle *fmu);
FMI4C_DLLAPI const char* fmi1_getGenerationDateAndTime(fmiHandle *fmu);
FMI4C_DLLAPI int fmi1_getNumberOfContinuousStates(fmiHandle *fmu);
FMI4C_DLLAPI int fmi1_getNumberOfEventIndicators(fmiHandle *fmu);
FMI4C_DLLAPI bool fmi1_defaultStartTimeDefined(fmiHandle *fmu);
FMI4C_DLLAPI bool fmi1_defaultStopTimeDefined(fmiHandle *fmu);
FMI4C_DLLAPI bool fmi1_defaultToleranceDefined(fmiHandle *fmu) ;
FMI4C_DLLAPI double fmi1_getDefaultStartTime(fmiHandle *fmu);
FMI4C_DLLAPI double fmi1_getDefaultStopTime(fmiHandle *fmu);
FMI4C_DLLAPI double fmi1_getDefaultTolerance(fmiHandle *fmu);
FMI4C_DLLAPI int fmi1_getNumberOfVariables(fmiHandle *fmu);
FMI4C_DLLAPI fmi1VariableHandle* fmi1_getVariableByIndex(fmiHandle *fmu, int i);
FMI4C_DLLAPI fmi1VariableHandle* fmi1_getVariableByValueReference(fmiHandle *fmu, fmi1ValueReference vr);
FMI4C_DLLAPI fmi1VariableHandle* fmi1_getVariableByName(fmiHandle *fmu, fmi1String name);
FMI4C_DLLAPI const char* fmi1_getVariableName(fmi1VariableHandle* var);
FMI4C_DLLAPI const char* fmi1_getVariableDescription(fmi1VariableHandle* var);
FMI4C_DLLAPI const char* fmi1_getVariableQuantity(fmi1VariableHandle* var);
FMI4C_DLLAPI const char* fmi1_getVariableUnit(fmi1VariableHandle* var);
FMI4C_DLLAPI const char* fmi1_getVariableDisplayUnit(fmi1VariableHandle* var);
FMI4C_DLLAPI bool fmi1_getVariableRelativeQuantity(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Real fmi1_getVariableMin(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Real fmi1_getVariableMax(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Real fmi1_getVariableNominal(fmi1VariableHandle* var);
FMI4C_DLLAPI bool fmi1_getVariableHasStartValue(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Real fmi1_getVariableStartReal(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Integer fmi1_getVariableStartInteger(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Boolean fmi1_getVariableStartBoolean(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1String fmi1_getVariableStartString(fmi1VariableHandle* var);
FMI4C_DLLAPI long fmi1_getVariableValueReference(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Causality fmi1_getVariableCausality(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Variability fmi1_getVariableVariability(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1Alias fmi1_getAlias(fmi1VariableHandle* var);
FMI4C_DLLAPI bool fmi1_getVariableIsFixed(fmi1VariableHandle* var);
FMI4C_DLLAPI fmi1DataType fmi1_getVariableDataType(fmi1VariableHandle* var);
FMI4C_DLLAPI int fmi1_getNumberOfBaseUnits(fmiHandle *fmu);
FMI4C_DLLAPI fmi1BaseUnitHandle *fmi1_getBaseUnitByIndex(fmiHandle *fmu, int i);
FMI4C_DLLAPI const char* fmi1_getBaseUnitUnit(fmi1BaseUnitHandle *baseUnit);
FMI4C_DLLAPI int fmi1_getNumberOfDisplayUnits(fmi1BaseUnitHandle *baseUnit);
FMI4C_DLLAPI void fmi1_getDisplayUnitByIndex(fmi1BaseUnitHandle *baseUnit, int id, const char **displayUnit, double *gain, double *offset);